# meilisearch-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: claude.yml  publish.yml  test.yml
src/meilisearch_mcp/: chat.py  client.py  documents.py  indexes.py  keys.py  logging.py  monitoring.py  server.py  settings.py  tasks.py
tests/: test_chat.py  test_docker_integration.py  test_mcp_client.py  test_user_agent.py
